force-app/main/default/objects/JBCXM__GSCockpitConfig__c/JBCXM__GSCockpitConfig__c.object-meta.xml
<CustomObject>
    <label>Cockpit Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cockpit Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>