force-app/main/default/objects/JBCXM__GSCockpitConfig__c/fields/JBCXM__Category__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Category__c</fullName>
    <label>Category</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>