force-app/main/default/objects/JBCXM__GSCockpitConfig__c/fields/JBCXM__Config__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Config__c</fullName>
    <description>To store JSON configuration</description>
    <label>Configuration</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>