force-app/main/default/objects/JBCXM__GSCockpitConfig__c/fields/JBCXM__EntityType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EntityType__c</fullName>
    <label>EntityType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>