force-app/main/default/objects/JBCXM__GSCockpitConfig__c/fields/JBCXM__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Type</label>
    <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
    <relationshipLabel>Cockpit Config By Relationship Type</relationshipLabel>
    <relationshipName>CockpitConfigByRelationshipType</relationshipName>
    <type>Lookup</type>
</CustomField>